Fix spacing on register page

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -817,14 +817,14 @@ body {
   }
   .main-section-signup {
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
   }
   .image-container img {
     max-width: 40vw;
   }
-
   .register-heading {
+    margin-bottom: 30px;
     margin-top: 50px;
   }
 }
